# DataDialogue

./: .gitignore  README.md  pyproject.toml
src/backend/: manage.py  run_in_prompt.py  sample.config.toml
src/backend/agentic_workflow/: helpers.py  interact.py
src/backend/agentic_workflow/agents/: coder_team.py  director.py  helper.py  interface_team.py  orchestration.py  planner.py  researcher_team.py
src/backend/agentic_workflow/agents/prompts/: planner_agent_prompt.txt
src/backend/agentic_workflow/tools/: coder.py  researcher.py
src/backend/chat/: config.py  consumers.py  models.py  routing.py  urls.py  views.py
src/backend/chat/clients/: claude.py  client.py  client_helper.py  ollama.py  openai.py  response.py
src/backend/chat/datasources/: csv.py  source.py  sqlite.py  sqllite.py
src/backend/chat/migrations/: 0001_initial.py  0002_conversation_delete_project.py  0003_settings_delete_conversation.py
src/backend/chat/prompting/: conversation.py
src/backend/chat/sample_data/: timeseries.py
src/backend/datadialogue/: asgi.py  settings.py  urls.py  wsgi.py
src/datadialogue/: config.py
src/datadialogue/clients/: claude.py  client.py  ollama.py  openai.py  response.py
src/datadialogue/datasources/: csv.py  sqllite.py
src/datadialogue/prompting/: conversation.py  main.py  test_prompt.py
src/frontend/: package-lock.json  package.json
src/frontend/src/: App.tsx  index.tsx
src/frontend/src/components/: Chat.tsx  Editor.tsx  NavBar.tsx  Settings.tsx
src/frontend/src/components/Dialogue/: BotMessage.tsx  ChatBox.tsx  ChatBubble.tsx  ChatText.tsx  FullChat.tsx  Message.tsx  MessageIcon.tsx  Shared.tsx  (+1 more)
(+10 files in other folders)
