[project]
name = "DataDialogue"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Alex Berkhout", email = "berkhoutalex@gmail.com"},
]
dependencies = [
    "openai>=1.14.3",
    "anthropic>=0.21.3",
    "toml>=0.10.2",
    "ipython>=8.22.2",
    "matplotlib>=3.8.3",
    "pandas>=2.2.1",
    "numpy>=1.26.4",
    "plotly>=5.20.0",
    "pandas-datareader>=0.10.0",
    "requests>=2.31.0",
    "yfinance>=0.2.37",
    "ollama>=0.1.8",
    "sqlalchemy>=2.0.29",
    "django>=5.0.4",
    "djangorestframework>=3.15.1",
    "django-cors-headers>=4.3.1",
    "channels[daphne]>=4.1.0",
    "langgraph>=0.0.39",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.4",
    "tavily-python>=0.3.3",
    "langchain-anthropic>=0.1.11",
    "langchain-experimental>=0.0.57",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
